# TheNodes

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  STABILITY.md
.github/: copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
config/: .gitignore  example.toml
docs/: EVENTS_RELIABILITY_AND_CONSENSUS_PLAN.md  PLUGIN_AUTHORING.md  SECURITY.md  SECURITY_TRUST_POLICY_PLAN.md
docs/adr/: 0001-secure-channel-abstraction.md  0002-persistent-peer-store.md  0003-relay-nodes.md  0004-udp-noise-transport.md  0005-nat-traversal-and-connection-policy.md  0006-delivery-semantics-and-reliability-model.md
examples/: simple_node.rs
examples/kvstore_plugin/: Cargo.toml
src/: config.rs  constants.rs  lib.rs  main.rs  prelude.rs
src/events/: dispatcher.rs  init.rs  macros.rs  mod.rs  model.rs  sink.rs
src/network/: bootstrap.rs  connection.rs  delivery.rs  events.rs  listener.rs  message.rs  mod.rs  nat_traversal.rs  peer.rs  peer_manager.rs  peer_store.rs  relay.rs  transport.rs  udp_listener.rs  udp_session.rs
src/plugin_host/: loader.rs  manager.rs  mod.rs
src/prompt/: mod.rs
src/realms/: mod.rs  realm.rs
src/security/: encryption.rs  mod.rs  secure_channel.rs  trust.rs
src/utils/: mod.rs  naming.rs
templates/: DESIGN_OVERVIEW.md  README.md  generate_app.sh
tests/: connection_policy.rs  delivery_semantics.rs  mtls.rs  nat_traversal.rs  node_id_uniqueness.rs  peer_store_cap.rs  peer_store_persistence.rs  peer_store_ttl.rs  pins.rs  promotion_event.rs  qos_behavior.rs  relay_helpers.rs  relay_notify.rs  relay_store_forward.rs  relay_ttl_unbind.rs  reliable_ack.rs  reliable_retry.rs  trust_policy.rs  udp_transport.rs  utils_naming.rs
workspaces/: .gitignore  README.md
(+22 files in other folders)
