[package]
name = "thenodes"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/TheNodesDev/TheNodes"
homepage = "https://thenodes.dev"
description = "TheNodes is a modular, plugin-driven P2P node framework for Rust, supporting node-embedded plugins (NEP) and core-as-a-library (CAL) modes with async-first APIs."
readme = "README.md"
documentation = "https://docs.rs/thenodes"
keywords = ["p2p", "networking", "async", "plugins", "security"]
categories = ["network-programming", "asynchronous", "cryptography"]

[lib]
name = "thenodes"
crate-type = ["cdylib", "rlib"]  # Supports both CAL (rlib) and NEP (cdylib)


[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.25"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.22"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
futures = "0.3"
libloading = "0.7"  # Required for dynamic plugin loading
clap = { version = "4", features = ["derive"] } # Add clap to parse CLI arguments
# interactive line editing + completion for prompt mode
rustyline = "12"
# cryptographic helpers for trust policy fingerprinting
sha2 = "0.10"
base16ct = { version = "0.2", features=["alloc"] }
base64 = "0.21"
x509-parser = "0.16"
webpki = "0.22"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4"] }
parking_lot = "0.12"
rand = { version = "0.8", features = ["std", "small_rng"] }
rcgen = "0.13"
hex = "0.4"
anyhow = "1"
pem = "3"
deunicode = "1"

# Noise protocol (optional, feature-gated)
snow = { version = "0.9", optional = true }

[features]
default = []
noise = ["snow"]

[dev-dependencies]
tempfile = "3.10"
